# serializer version: 1
# name: test_load_cellpack[bcif]
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[bcif].1
  array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
# ---
# name: test_load_cellpack[bcif].2
  array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
# ---
# name: test_load_cellpack[bcif].3
  array([[ 4.53469181e+00, -4.99454594e+00, -8.36664587e-02],
         [-8.04108238e+00,  4.73163223e+00,  8.68928719e+00],
         [ 6.16498291e-01,  7.43639898e+00,  7.43152499e-02],
         [ 7.54179144e+00,  2.21917582e+00, -2.82811552e-01],
         [-4.57040787e+00,  1.14248447e+01,  2.63375580e-01],
         [-4.64318943e+00, -6.81963873e+00, -1.42756283e+00],
         [-2.19629973e-01, -6.87920189e+00,  5.49363671e-03],
         [-1.41306772e+01, -1.18467884e+01, -1.15811718e+00],
         [ 2.00076818e+00,  6.44362593e+00,  3.07052225e-01],
         [ 6.23947620e-01, -7.02955604e-01,  8.55541468e-01],
         [-5.74327612e+00, -8.50007725e+00, -9.16216552e-01],
         [-3.44309121e-01, -3.29546118e+00,  4.66723770e-01],
         [-2.49491549e+00,  4.62450266e+00, -3.35157704e+00],
         [-2.15547013e+00,  5.10448790e+00,  6.99194819e-02],
         [-3.14450932e+00, -6.26408482e+00,  2.94954300e-01],
         [ 2.22687811e-01, -4.02230215e+00, -1.03645325e-01],
         [-1.12392654e+01, -2.98510861e+00, -1.49415696e+00],
         [-1.82572353e+00, -3.78034854e+00, -9.77866113e-01],
         [ 4.89606559e-01, -1.81617641e+00, -1.11832932e-01],
         [ 1.10476875e+01,  1.05490837e+01,  7.79137909e-01],
         [-1.65821946e+00, -2.68809485e+00, -9.52197194e-01],
         [ 9.11438525e-01,  1.89162779e+00,  8.25187862e-01],
         [ 6.16576672e+00,  7.74425030e+00, -5.86711168e-01],
         [ 8.50978017e-01,  5.46858966e-01, -3.17262709e-01],
         [-6.14922142e+00,  4.91880417e+00,  9.96546626e-01],
         [-9.79176426e+00, -1.14012051e+01,  4.66646582e-01],
         [ 6.09808064e+00, -2.83320308e+00, -1.71347961e-01],
         [-1.41395025e+01, -1.18483381e+01, -1.14810598e+00],
         [ 2.00641108e+00,  6.29074335e+00,  4.86122996e-01],
         [-9.84671116e+00, -8.41470051e+00,  6.31679952e-01],
         [ 6.22084999e+00,  7.26157808e+00, -1.76517463e+00],
         [-1.40000029e+01, -3.85628033e+00, -2.01601148e+00],
         [-4.04794121e+00,  4.99865007e+00,  2.89434493e-01],
         [-1.67934537e+00, -2.69900990e+00, -9.02395010e-01],
         [ 7.80418205e+00,  4.02742958e+00,  1.10572353e-01],
         [ 2.78673124e+00,  2.28710079e+00, -4.60319400e-01],
         [-2.72035980e+00, -7.59373426e+00, -6.13545895e-01],
         [ 5.60282421e+00, -7.73490071e-01, -9.04678166e-01],
         [-6.16186428e+00,  4.91497993e+00,  9.92736697e-01],
         [-1.65265989e+00, -2.70096397e+00, -9.20077145e-01],
         [ 2.00376093e-01, -4.04344225e+00, -1.24750353e-01],
         [-8.06974983e+00,  1.34233189e+01,  9.09097970e-01],
         [-5.72112799e+00,  3.41090083e+00,  1.51455474e+00],
         [-4.18590450e+00,  9.78898621e+00,  6.22364283e-01],
         [-3.49050015e-01,  7.54801512e+00,  7.99094066e-02],
         [-1.09950244e+00,  8.25655460e+00,  7.87838474e-02],
         [-4.22343874e+00, -5.30900049e+00,  1.01415932e+00],
         [-4.10134792e-02, -6.10495615e+00, -6.23550713e-01],
         [-7.83582830e+00,  1.22962246e+01,  3.72274876e+00],
         [ 5.03943872e+00,  2.83410835e+00,  1.64944065e+00],
         [ 5.98743498e-01,  7.45312166e+00,  3.03119812e-02],
         [-5.65631628e+00, -8.69148731e+00, -9.15249586e-01],
         [ 7.44133711e+00, -1.79095960e+00,  1.26504004e-02],
         [ 7.61813641e+00,  4.16584969e+00,  3.03145170e-01],
         [-1.06747084e+01, -8.48663807e+00,  2.03636694e+00],
         [-6.11519861e+00,  4.89545059e+00,  9.66862679e-01],
         [ 2.63864326e+00, -6.23263121e+00, -4.00606960e-01],
         [-5.31550407e+00, -6.03050375e+00,  7.44527504e-02],
         [ 9.11648655e+00, -1.15247116e+01, -1.70582891e+00],
         [ 7.79649496e+00,  4.01686859e+00,  7.70552680e-02],
         [ 2.46113956e-01,  2.33155894e+00,  2.81998259e-03],
         [-5.50014687e+00,  4.39489698e+00,  2.41342640e+00],
         [-1.34967470e+00, -5.44102240e+00,  8.98248732e-01],
         [ 1.03468313e+01, -3.92798376e+00, -4.97021407e-01],
         [-1.50972402e+00, -3.06888890e+00,  2.04920933e-01],
         [-4.22010851e+00, -5.29581785e+00,  1.03138161e+00],
         [ 2.93652058e+00, -3.37355232e+00, -1.93083152e-01],
         [ 6.19608927e+00,  7.25118971e+00, -1.80527055e+00],
         [ 2.01397419e+00, -3.08705378e+00, -1.37007022e+00],
         [ 4.69355440e+00,  5.87086439e+00, -7.16569126e-01],
         [-7.42342138e+00, -2.49499585e-02, -8.83767530e-02],
         [-5.10872126e+00,  2.75785089e+00, -7.01327610e+00],
         [ 7.54730511e+00, -8.20635319e-01,  1.06976256e-02],
         [ 2.04807162e+00,  6.34936857e+00,  5.15801191e-01],
         [ 4.24072933e+00,  2.59803820e+00,  3.74957800e+00],
         [ 5.27974129e+00,  1.91281819e+00,  2.80595207e+00],
         [-8.51310539e+00, -8.31852722e+00,  2.72183561e+00],
         [ 2.31871098e-01, -4.01565981e+00, -1.52964786e-01],
         [ 8.10418034e+00,  1.47469211e+00, -8.54377091e-01],
         [-1.05846986e-01, -1.89825571e+00,  9.66558576e-01],
         [-4.00409079e+00,  9.53878117e+00, -3.46266747e-01],
         [ 3.74939889e-02, -5.79798174e+00, -8.74199569e-02],
         [-4.77024984e+00, -5.14273500e+00,  4.49693233e-01],
         [ 3.65370917e+00,  5.87381721e-01, -3.89976501e-01],
         [-6.10980892e+00,  4.90297651e+00,  9.78868604e-01],
         [ 8.12974739e+00,  3.21577334e+00, -1.31156766e+00],
         [ 3.00657392e+00,  1.86283898e+00,  1.57442081e+00],
         [-2.97762573e-01, -6.16419792e+00, -9.74030674e-01],
         [ 9.84799576e+00, -4.92227411e+00, -3.90733600e-01],
         [ 1.06381836e+01, -3.81415033e+00, -2.80623627e+00],
         [-3.68400168e+00, -7.33024025e+00, -1.74381912e-01],
         [-5.93996525e+00, -1.47287722e+01, -4.03035320e-02],
         [ 6.61214590e+00,  4.40469027e+00,  4.03378278e-01],
         [-5.97221613e+00,  3.34051323e+00,  9.79692996e-01],
         [ 1.08111858e+01,  1.01572981e+01, -2.76999995e-02],
         [-4.71894598e+00, -5.11392546e+00,  4.15160865e-01],
         [-8.28426647e+00,  3.41126609e+00,  6.14299297e+00],
         [-5.78717899e+00, -8.56677151e+00, -8.85278463e-01],
         [-6.46595192e+00, -9.01687908e+00, -1.15436412e-01],
         [-4.83937216e+00, -6.75884056e+00, -1.29036832e+00]])
# ---
# name: test_load_cellpack[bcif].4
  array([ True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True])
# ---
# name: test_load_cellpack[bcif].5
  array([[ 1.65273890e-01,  6.69515729e-01, -6.44747466e-02,
          -7.21309483e-01],
         [ 1.47037478e-02, -9.86447871e-01,  1.50528654e-01,
          -6.36141822e-02],
         [ 5.88227153e-01, -2.29152560e-01, -6.63764358e-01,
           4.01248217e-01],
         [ 2.63622403e-01,  7.67340779e-01,  3.66255373e-01,
          -4.55618083e-01],
         [ 4.37489808e-01,  7.51138926e-01, -4.75528628e-01,
           1.35205597e-01],
         [ 3.43283653e-01,  5.83740950e-01,  6.97676182e-01,
           2.34000787e-01],
         [ 1.57837778e-01,  6.89265668e-01, -1.57837778e-01,
          -6.89265728e-01],
         [ 3.93848956e-01,  4.57891732e-01, -4.09606218e-01,
           6.83543324e-01],
         [ 1.31061792e-01, -4.51023340e-01, -8.79160583e-01,
          -8.04474801e-02],
         [ 3.02503735e-01, -1.60945673e-02, -5.58456063e-01,
           7.72224069e-01],
         [ 3.05067718e-01,  5.10218978e-01, -2.00653777e-01,
           7.78642178e-01],
         [ 2.44774967e-01,  8.63308832e-02,  8.68347466e-01,
          -4.22616184e-01],
         [ 6.37045577e-02,  5.12737155e-01,  3.62503454e-02,
           8.55419636e-01],
         [ 9.13388610e-01, -2.03956947e-01,  2.11284652e-01,
           2.81903774e-01],
         [ 1.05671100e-01,  8.80208135e-01, -4.08842675e-02,
          -4.60894197e-01],
         [ 3.16572398e-01, -1.81476116e-01,  7.53318429e-01,
          -5.47019720e-01],
         [ 6.29190877e-02,  4.64453518e-01,  2.54385352e-01,
           8.45925629e-01],
         [ 3.19828719e-01, -6.14186704e-01, -4.63139564e-01,
          -5.52619934e-01],
         [ 1.37464389e-01,  2.39527166e-01, -7.51059294e-01,
          -5.99668682e-01],
         [ 2.63924062e-01,  6.17033660e-01,  5.08724809e-01,
          -5.39364636e-01],
         [ 1.84404939e-01,  6.42630756e-02, -5.59827924e-01,
          -8.05267096e-01],
         [ 3.27577323e-01, -6.15840614e-01, -4.39676791e-01,
          -5.65845370e-01],
         [ 4.96345907e-02, -2.90064842e-01, -6.85911655e-01,
           6.65539265e-01],
         [ 2.92459756e-01,  2.04678595e-01, -5.61843932e-01,
           7.46351063e-01],
         [ 1.92126855e-01, -9.31528270e-01, -2.51216024e-01,
          -1.79563373e-01],
         [ 3.12886447e-01,  7.62211859e-01, -5.66636443e-01,
          -4.16119510e-05],
         [ 6.66562021e-02,  2.16666266e-01,  3.80272746e-01,
           8.96681905e-01],
         [ 3.93848956e-01,  4.57891732e-01, -4.09606218e-01,
           6.83543324e-01],
         [ 3.41533870e-02, -3.27447295e-01, -8.93523514e-01,
          -3.05310488e-01],
         [ 5.88353038e-01, -7.32126653e-01, -2.88627058e-01,
          -1.86123252e-01],
         [ 5.44480205e-01, -1.59530476e-01, -6.51171148e-01,
          -5.04014850e-01],
         [ 4.39097658e-02, -1.49251044e-01, -7.90985346e-01,
           5.91735959e-01],
         [ 7.55824745e-01,  3.76434386e-01,  1.45265803e-01,
           5.15599728e-01],
         [ 1.84404939e-01,  6.42630756e-02, -5.59827924e-01,
          -8.05267096e-01],
         [ 4.41931635e-01,  3.39936703e-01, -3.25001448e-01,
          -7.63848305e-01],
         [ 4.69971687e-01, -3.45502119e-03, -6.56513393e-01,
           5.89957297e-01],
         [ 4.60751832e-01,  9.03971121e-02,  3.81107539e-01,
          -7.96439946e-01],
         [ 5.20466976e-02,  2.65365869e-01, -6.58594668e-01,
           7.02184975e-01],
         [ 1.92126855e-01, -9.31528270e-01, -2.51216024e-01,
          -1.79563373e-01],
         [ 1.84404939e-01,  6.42630756e-02, -5.59827924e-01,
          -8.05267096e-01],
         [ 3.16572398e-01, -1.81476116e-01,  7.53318429e-01,
          -5.47019720e-01],
         [ 8.43113840e-01,  1.38525844e-01, -4.97267306e-01,
          -1.50618345e-01],
         [ 4.17804897e-01,  6.53440595e-01, -5.24916172e-01,
          -3.50780576e-01],
         [ 5.20811141e-01, -6.94254160e-01, -1.19429998e-01,
          -4.82428640e-01],
         [ 6.37437224e-01,  3.06061715e-01, -6.37437284e-01,
          -3.06061715e-01],
         [ 3.32472891e-01, -3.95583093e-01,  1.16122283e-01,
           8.48239899e-01],
         [ 7.58880138e-01,  4.92778141e-03, -6.40246570e-01,
          -1.18878186e-01],
         [ 2.46031389e-01,  9.61274862e-01, -3.82366553e-02,
          -1.18081465e-01],
         [ 5.14043391e-01,  1.32599309e-01, -6.32048011e-01,
          -5.64307690e-01],
         [ 5.33786058e-01,  2.40640596e-01,  8.10635865e-01,
          -1.70953208e-05],
         [ 5.88227153e-01, -2.29152560e-01, -6.63764358e-01,
           4.01248217e-01],
         [ 4.40655679e-01, -8.32044333e-02,  4.67078120e-01,
          -7.62021899e-01],
         [ 1.50100395e-01, -4.71578956e-01, -5.69698453e-01,
          -6.55930221e-01],
         [ 6.05907403e-02, -5.63822627e-01,  1.07431076e-01,
           8.16629887e-01],
         [ 2.10324854e-01, -3.94028753e-01, -6.51093304e-01,
          -6.13565207e-01],
         [ 1.92126855e-01, -9.31528270e-01, -2.51216024e-01,
          -1.79563373e-01],
         [ 5.33540882e-02, -4.06748176e-01,  5.60013413e-01,
           7.19732642e-01],
         [ 5.86102605e-01, -4.26582582e-02, -8.09112608e-01,
          -8.01125168e-07],
         [ 2.57045142e-02,  4.53803986e-01,  8.45402539e-01,
          -2.80604094e-01],
         [ 4.41931635e-01,  3.39936703e-01, -3.25001448e-01,
          -7.63848305e-01],
         [ 3.05411100e-01,  4.19137150e-01,  8.06980789e-01,
          -2.82515436e-01],
         [ 7.41847694e-01,  2.75787115e-01, -5.93202829e-01,
          -1.47540316e-01],
         [ 2.68291771e-01,  6.71121299e-01, -9.28206220e-02,
           6.84821963e-01],
         [ 3.46660167e-01, -4.35768992e-01,  7.66033113e-01,
          -3.21164966e-01],
         [ 5.32909632e-01, -1.99864522e-01, -4.78214532e-01,
           6.68948054e-01],
         [ 7.58880138e-01,  4.92778141e-03, -6.40246570e-01,
          -1.18878186e-01],
         [ 1.83513045e-01, -5.64167619e-01, -7.71419108e-01,
           2.30100140e-01],
         [ 5.44480205e-01, -1.59530476e-01, -6.51171148e-01,
          -5.04014850e-01],
         [ 1.15596175e-01,  8.40948284e-01,  1.57258332e-01,
          -5.04733026e-01],
         [ 2.03942969e-01, -1.54576138e-01,  5.73600173e-01,
           7.78147280e-01],
         [ 6.75619423e-01,  6.75619483e-01, -2.08658591e-01,
           2.08658591e-01],
         [ 3.56561869e-01,  1.71613663e-01, -1.23334989e-01,
           9.10037041e-01],
         [ 1.68275714e-01,  3.89746219e-01, -5.28812528e-01,
          -7.34917998e-01],
         [ 3.41533870e-02, -3.27447295e-01, -8.93523514e-01,
          -3.05310488e-01],
         [ 2.77409226e-01, -4.75780815e-01, -8.23907435e-01,
          -1.33263633e-01],
         [ 8.42090249e-01, -3.51374835e-01,  6.17103651e-02,
          -4.04556155e-01],
         [ 2.98676401e-01, -2.91968826e-02, -7.19039202e-01,
           6.26935661e-01],
         [ 3.16572398e-01, -1.81476116e-01,  7.53318429e-01,
          -5.47019720e-01],
         [ 2.89249383e-02, -4.88468140e-01,  7.80896425e-01,
           3.88354480e-01],
         [ 2.23960727e-01, -1.03220038e-01, -7.82850862e-01,
           5.71337163e-01],
         [ 6.14403546e-01,  6.61098421e-01, -9.91751477e-02,
           4.19181228e-01],
         [ 9.77591351e-02,  8.12965214e-01,  5.60751379e-01,
           1.22677036e-01],
         [ 9.40973312e-02, -9.80099618e-01,  1.54288545e-01,
           8.21217448e-02],
         [ 7.86056101e-01, -4.34274703e-01,  4.39995497e-01,
           9.19408080e-07],
         [ 1.92126855e-01, -9.31528270e-01, -2.51216024e-01,
          -1.79563373e-01],
         [ 6.42398596e-01, -4.09663975e-01, -2.56827414e-01,
          -5.94731510e-01],
         [ 6.51157439e-01,  3.42069089e-01,  5.11464357e-01,
           4.44392234e-01],
         [ 3.46495569e-01,  5.90772569e-01, -7.28707612e-01,
          -7.01392173e-06],
         [ 8.19615543e-01,  1.28464922e-02, -1.25079840e-01,
           5.58955967e-01],
         [ 9.12681162e-01,  1.09565060e-03, -4.08670723e-01,
           9.27948829e-09],
         [ 1.99512824e-01,  6.80794597e-01, -2.51782294e-02,
           7.04314768e-01],
         [ 9.65511978e-01, -2.51070172e-01, -6.88727796e-02,
           5.94862286e-06],
         [ 4.86592621e-01, -6.68395638e-01, -4.54145551e-01,
           3.32067013e-01],
         [ 2.55032420e-01, -7.02807784e-01,  1.90224349e-01,
           6.36150420e-01],
         [ 3.48216444e-01,  6.39124930e-01,  4.07103300e-01,
          -5.51947117e-01],
         [ 4.25877161e-02,  3.48246127e-01, -9.27491784e-01,
          -1.29119441e-01],
         [ 1.94849506e-01, -8.20734426e-02, -9.68274474e-01,
           1.33211121e-01],
         [ 3.05067718e-01,  5.10218978e-01, -2.00653777e-01,
           7.78642178e-01],
         [ 7.35648513e-01, -5.47267377e-01, -1.85401410e-01,
          -3.53388250e-01],
         [ 9.22220126e-02, -8.40206802e-01,  3.50718558e-01,
          -4.03119922e-01]])
# ---
# name: test_load_cellpack[bcif].6
  array([], dtype=bool)
# ---
# name: test_load_cellpack[bcif].7
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[cif]
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[cif].1
  array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])
# ---
# name: test_load_cellpack[cif].2
  array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])
# ---
# name: test_load_cellpack[cif].3
  array([11417,  1850,  9794,  5480,   866,   116,  2877, 14594, 11699,
          9354,  7506,  6557,   578,  5655,  9799,  4331, 18091,  8413,
         10742, 10818, 15544,  2036,  4275, 11251, 10994, 16828, 18060,
          5549, 14594, 12834, 15576,  1913,  8538,  6868,  2036,  7167,
          8340,  5391,  9082, 16828,  2036,  4283, 16828, 13342,  6203,
          2068,   997, 11735,  4344, 14064,  7117,  9799,  4275, 10402,
         11492, 13525, 16332, 10174,   715, 13321,  7167,  5317, 12431,
          8753,  6260,  7034, 11735,  2499,  1913, 10120, 15209, 10579,
          4331,  2443, 12550,  5562,  6461, 17281,  4283,  7662,  9721,
          4888,  2802, 12154,  4497, 16332, 10529,   498,  4100,  3175,
           506, 13705,  6801, 11038, 14988, 13011, 12977,  6303,  7506,
          7610])
# ---
# name: test_load_cellpack[cif].4
  array([[-2.21092463e+00,  7.83482504e+00,  8.02131891e-01],
         [-5.66411352e+00, -1.32042370e+01, -1.59381711e+00],
         [ 2.59198117e+00, -7.34483528e+00, -3.46860498e-01],
         [ 5.38464594e+00,  2.98477411e+00,  4.21496153e+00],
         [ 4.70420361e+00,  3.92185950e+00,  3.28779280e-01],
         [-3.25993037e+00,  5.81279135e+00, -3.92198491e+00],
         [-7.64675760e+00, -8.71271551e-01, -3.02156687e-01],
         [ 1.00781898e+01,  9.54371834e+00,  1.18654358e+00],
         [-5.47332525e+00,  4.72989559e+00,  9.72551107e-01],
         [-9.71367550e+00, -3.75697637e+00, -1.48787093e+00],
         [ 4.11544561e+00,  2.22640944e+00,  1.44510365e+00],
         [-1.42673283e+01, -4.61339188e+00, -2.10638547e+00],
         [-1.93717390e-01, -2.06850386e+00,  8.62069428e-01],
         [ 5.87032509e+00,  2.61563945e+00,  1.58088386e+00],
         [ 2.72696948e+00, -6.71670675e+00, -3.84823322e-01],
         [ 3.49048734e+00,  5.26353216e+00, -5.76189816e-01],
         [ 1.16774273e+01, -9.60147858e+00,  2.11262535e-02],
         [-3.56664491e+00,  1.09560032e+01,  2.92313546e-01],
         [-4.24234200e+00, -5.21335840e+00, -9.94574092e-03],
         [-6.35175514e+00, -2.79630589e+00, -1.97830093e+00],
         [ 1.23574877e+01, -1.06375561e+01,  4.20040369e+00],
         [-3.60259008e+00, -6.62672949e+00, -1.89941883e+00],
         [ 6.11837101e+00,  7.28433371e+00, -6.85383081e-01],
         [ 7.83811665e+00, -1.00636923e+00, -2.96697468e-02],
         [-1.47714794e+00, -2.49605581e-01,  1.04583800e-01],
         [ 9.07640839e+00, -1.16012039e+01, -1.80894828e+00],
         [-9.25191116e+00, -1.05841236e+01,  3.16843063e-01],
         [ 4.98342991e+00,  8.43028188e-01,  8.83643532e+00],
         [ 1.00876245e+01,  9.55268478e+00,  1.18083799e+00],
         [-8.28766346e+00,  1.11368456e+01,  4.12117624e+00],
         [ 1.19882631e+01, -9.50755024e+00,  3.65549254e+00],
         [-5.66011333e+00, -1.31241407e+01,  4.42416936e-01],
         [-4.58633375e+00,  1.12232103e+01,  4.66515459e-02],
         [-9.01688862e+00,  3.69162726e+00,  6.92188168e+00],
         [-3.64353561e+00, -6.59312439e+00, -1.87652445e+00],
         [-1.69769037e+00, -3.36433315e+00, -1.04146981e+00],
         [-2.44767809e+00,  6.99702263e+00,  8.01525295e-01],
         [ 5.85519695e+00,  4.04275513e+00,  1.40386546e+00],
         [ 6.77007532e+00,  3.57801795e-01, -3.34224291e-02],
         [ 9.07279396e+00, -1.16078844e+01, -1.79688919e+00],
         [-3.61505055e+00, -6.60835314e+00, -1.89235795e+00],
         [ 5.77088594e+00,  6.84345531e+00, -9.00797129e-01],
         [ 9.06755543e+00, -1.16160288e+01, -1.76124668e+00],
         [-1.08377676e+01, -1.00584908e+01, -5.12339137e-02],
         [-6.14153147e+00, -1.11637669e+01,  1.35918438e-01],
         [-2.93826723e+00, -5.38587952e+00, -4.33462769e-01],
         [ 4.66869974e+00,  3.00485420e+00,  5.54283094e+00],
         [ 1.60308921e+00,  5.63446236e+00, -3.48882258e-01],
         [ 3.47855544e+00,  6.55657291e+00, -1.60088092e-01],
         [ 2.54091096e+00,  4.59417439e+00, -9.04339731e-01],
         [-5.28151989e+00, -3.21795130e+00,  1.35976374e-01],
         [ 2.68506598e+00, -6.69965172e+00, -4.18917269e-01],
         [ 6.10774326e+00,  7.31878424e+00, -7.35103786e-01],
         [-1.82361817e+00,  4.86450100e+00, -2.53084946e+00],
         [-4.37970877e+00,  1.06366129e+01, -2.89945751e-01],
         [-7.77975416e+00, -8.32192802e+00,  2.21073866e+00],
         [ 9.55731678e+00,  9.31493282e+00,  1.83434498e+00],
         [ 4.85017157e+00,  1.03570395e+01, -2.09481192e+00],
         [ 6.25127554e-01, -2.19127297e+00,  7.03028366e-02],
         [-1.15143423e+01, -1.02010365e+01,  6.82988107e-01],
         [-1.72210670e+00, -3.36492848e+00, -9.90876496e-01],
         [ 1.59073091e+00,  4.29988146e+00,  1.89058036e-01],
         [ 1.01867886e+01,  9.03093815e+00,  1.88853204e+00],
         [-6.75335550e+00,  4.24754190e+00, -6.08922672e+00],
         [-5.93202925e+00, -1.39400072e+01,  4.78822142e-01],
         [-7.53112793e+00,  9.96508956e-01, -2.04817161e-01],
         [ 1.63328660e+00,  5.61949635e+00, -3.42210084e-01],
         [-8.70321369e+00,  2.61056566e+00,  5.93420446e-01],
         [-5.69458771e+00, -1.31059666e+01,  4.92023975e-01],
         [ 7.39808607e+00,  4.06585121e+00,  4.18745220e-01],
         [-1.35795403e+01, -1.20211992e+01, -5.62180221e-01],
         [ 6.81269932e+00,  1.25395870e+00, -4.52857137e-01],
         [ 3.44986296e+00,  5.25379610e+00, -6.06813133e-01],
         [-5.95870781e+00, -2.09515095e+00,  3.18525583e-02],
         [ 1.08868732e+01,  9.93300247e+00, -5.30560911e-02],
         [ 4.95999002e+00,  2.02339101e+00,  8.40203762e+00],
         [-8.37588310e+00, -3.19407582e+00, -1.42346561e+00],
         [-1.35064611e+01, -1.11919975e+01, -9.85954940e-01],
         [ 5.73273087e+00,  6.90838242e+00, -9.44622457e-01],
         [ 4.18193579e+00, -3.62436533e+00, -8.40333700e-01],
         [-1.34684968e+00, -2.92943549e+00,  6.79679513e-02],
         [-5.18712234e+00,  3.05447626e+00, -5.78614902e+00],
         [-9.11450768e+00,  1.24735284e+00,  1.09992528e+00],
         [-6.86038637e+00, -9.22861481e+00,  9.80769515e-01],
         [-4.52629042e+00,  9.15429497e+00,  4.29646373e-01],
         [ 9.56444263e+00,  9.33644676e+00,  1.82473040e+00],
         [ 5.24905872e+00,  3.07198405e+00,  4.48147821e+00],
         [ 8.86516050e-02,  2.67944264e+00,  4.71620142e-01],
         [ 7.23178053e+00,  4.24150610e+00,  3.75854284e-01],
         [ 2.89322827e-02, -5.90777016e+00, -5.48683643e-01],
         [ 2.17666969e-01,  2.27922940e+00, -7.29848631e-03],
         [ 9.11038017e+00, -1.15309362e+01, -1.67693555e+00],
         [-9.32897663e+00,  2.29440665e+00,  1.26561809e+00],
         [-2.32405162e+00, -6.82178879e+00, -1.24195719e+00],
         [-1.02989864e+01,  1.09830379e+01,  6.55220211e-01],
         [-8.54561710e+00,  1.23128576e+01, -8.03918898e-01],
         [-8.88018417e+00,  1.19909725e+01, -9.84517187e-02],
         [-6.37190294e+00, -8.89779091e+00, -1.07235700e-01],
         [ 4.08069801e+00,  2.19950652e+00,  1.39716995e+00],
         [ 2.42415237e+00, -4.14557266e+00,  1.13887537e+00]])
# ---
# name: test_load_cellpack[cif].5
  array([ True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True,  True,  True,  True,  True,  True,  True,  True,  True,
          True])
# ---
# name: test_load_cellpack[cif].6
  array([[ 6.78375542e-01,  4.60949130e-02, -5.68789184e-01,
           4.62924331e-01],
         [ 4.54306379e-02,  1.74092293e-01, -7.71257222e-01,
           6.10611558e-01],
         [ 2.33703449e-01,  3.86855543e-01,  6.63153589e-01,
           5.96440494e-01],
         [ 9.04723167e-01, -3.08988094e-01, -8.92781988e-02,
           2.79347301e-01],
         [ 9.90238667e-01,  5.04966825e-04, -1.39381424e-01,
           0.00000000e+00],
         [ 2.03454867e-01, -7.54467666e-01, -5.69288671e-01,
           2.55447954e-01],
         [ 1.68824330e-01,  9.53735173e-01,  2.35196754e-01,
          -8.10153410e-02],
         [ 8.23851109e-01, -2.78569579e-01,  2.84948070e-02,
           4.92722452e-01],
         [ 4.30126071e-01,  5.20572066e-01,  5.13394773e-01,
          -5.29198945e-01],
         [ 6.03697859e-02, -5.31192005e-01, -2.34693334e-01,
           8.11884999e-01],
         [ 3.32137257e-01,  3.08757782e-01,  7.87832081e-01,
           4.16822910e-01],
         [ 4.01274502e-01,  4.86760885e-01,  3.47901762e-01,
          -6.93581820e-01],
         [ 5.99976897e-01,  7.40954697e-01, -3.01659673e-01,
          -1.29513292e-05],
         [ 6.23820983e-02,  5.42443216e-01, -2.59844214e-02,
           8.37375879e-01],
         [ 5.54103255e-01, -6.26477659e-01,  3.97170007e-01,
           3.78158331e-01],
         [ 4.48366553e-01, -6.30170703e-01,  2.92362720e-01,
           5.62569618e-01],
         [ 5.77643216e-01,  7.06039488e-01, -4.09934163e-01,
           5.08953817e-05],
         [ 1.05276674e-01, -3.37868303e-01, -8.14895034e-01,
          -4.58971590e-01],
         [ 5.33022806e-02, -5.86627126e-01,  3.70815516e-01,
           7.17970550e-01],
         [ 4.27889109e-01, -4.85906422e-01, -1.82942927e-01,
          -7.39812136e-01],
         [ 4.97632325e-01,  3.20280492e-02,  3.46285589e-02,
          -8.66103768e-01],
         [ 1.65475994e-01, -6.35406137e-01, -2.16542691e-01,
          -7.22557366e-01],
         [ 3.07518631e-01,  6.67107522e-01,  4.21758294e-01,
          -5.31534791e-01],
         [ 5.26787460e-01, -3.82628918e-01, -5.81844985e-01,
          -4.87875909e-01],
         [ 3.77369434e-01, -6.04484677e-01,  6.91723228e-01,
           1.16655685e-01],
         [ 1.63307056e-01, -3.84878397e-01, -8.14109385e-01,
           4.03127968e-01],
         [ 7.07777679e-01, -5.30295789e-01,  4.66841608e-01,
          -7.23396515e-05],
         [ 5.69649041e-01, -3.80801052e-01, -5.02498209e-01,
          -5.27250826e-01],
         [ 8.23851109e-01, -2.78569579e-01,  2.84948070e-02,
           4.92722452e-01],
         [ 1.46250308e-01,  4.29079503e-01,  6.29095018e-01,
          -6.31334066e-01],
         [ 6.11548126e-01,  8.53793547e-02, -2.95610636e-01,
          -7.28858292e-01],
         [ 5.40913939e-01, -7.99976408e-01, -1.03215380e-02,
          -2.59662241e-01],
         [ 4.40056175e-01,  7.99149513e-01,  3.50559354e-01,
          -2.11401775e-01],
         [ 8.48938525e-01,  3.78656119e-01, -2.59389818e-01,
           2.62108535e-01],
         [ 1.65475994e-01, -6.35406137e-01, -2.16542691e-01,
          -7.22557366e-01],
         [ 5.29630363e-01, -5.76088667e-01, -3.83396387e-01,
          -4.90133792e-01],
         [ 4.14976962e-02,  2.08959565e-01, -8.01723659e-01,
           5.58460057e-01],
         [ 3.16213280e-01,  4.95967269e-01,  5.01248166e-02,
           8.07143092e-01],
         [ 6.30746722e-01,  6.47115707e-01,  3.02851945e-01,
          -3.02901655e-01],
         [ 1.63307056e-01, -3.84878397e-01, -8.14109385e-01,
           4.03127968e-01],
         [ 1.65475994e-01, -6.35406137e-01, -2.16542691e-01,
          -7.22557366e-01],
         [ 1.78065225e-01, -2.28564411e-01, -8.42103124e-01,
           4.54881907e-01],
         [ 1.63307056e-01, -3.84878397e-01, -8.14109385e-01,
           4.03127968e-01],
         [ 1.11361735e-01,  3.86659987e-02,  5.76906562e-01,
           8.08265805e-01],
         [ 3.71442467e-01,  1.87315643e-01, -7.80677557e-01,
           4.66342777e-01],
         [ 4.76035148e-01,  1.91947043e-01, -2.43596941e-01,
          -8.22901607e-01],
         [ 2.11346388e-01,  1.62238330e-01,  2.77926147e-01,
          -9.22910094e-01],
         [ 7.24674106e-01, -2.46935412e-01, -6.36783183e-01,
           9.14255157e-02],
         [ 3.22452486e-01, -1.77287325e-01,  4.32013899e-01,
           8.23369682e-01],
         [ 3.04820061e-01,  7.69259572e-01,  5.61521828e-01,
           9.76019260e-03],
         [ 4.15540814e-01, -2.18204960e-01,  8.60181451e-01,
          -1.99638784e-01],
         [ 5.54103255e-01, -6.26477659e-01,  3.97170007e-01,
           3.78158331e-01],
         [ 3.07518631e-01,  6.67107522e-01,  4.21758294e-01,
          -5.31534791e-01],
         [ 7.26542398e-02,  1.16417624e-01,  1.60627842e-01,
           9.77430820e-01],
         [ 5.12642205e-01,  5.89507520e-01,  5.73714495e-01,
          -2.46072456e-01],
         [ 5.55188060e-01,  3.72357637e-01,  5.38500071e-01,
          -5.13205767e-01],
         [ 5.18382549e-01, -3.32084656e-01,  3.20979685e-01,
          -7.19743848e-01],
         [ 3.11575085e-01, -2.43659690e-01,  7.44024336e-01,
          -5.38433254e-01],
         [ 1.85380235e-01, -4.08679515e-01,  7.57983387e-01,
           4.73349243e-01],
         [ 5.13551593e-01,  6.80008084e-02,  6.13470078e-01,
           5.96169293e-01],
         [ 5.29630363e-01, -5.76088667e-01, -3.83396387e-01,
          -4.90133792e-01],
         [ 4.38922644e-01, -1.26380727e-01,  6.98503017e-01,
           5.51012933e-01],
         [ 6.05896890e-01,  2.92938743e-02,  2.30731145e-01,
           7.60750413e-01],
         [ 3.32670569e-01, -7.78050721e-01,  5.22836745e-01,
           1.02814816e-01],
         [ 5.68564571e-02,  6.56799152e-02,  6.38161004e-01,
           7.64988601e-01],
         [ 9.01640594e-01,  4.32484657e-01, -1.10901042e-03,
          -3.76692988e-08],
         [ 7.24674106e-01, -2.46935412e-01, -6.36783183e-01,
           9.14255157e-02],
         [ 4.23000723e-01,  5.30278146e-01, -6.66794777e-02,
          -7.31670618e-01],
         [ 5.40913939e-01, -7.99976408e-01, -1.03215380e-02,
          -2.59662241e-01],
         [ 8.07264626e-01, -1.58540159e-01, -5.68514466e-01,
          -1.10752985e-07],
         [ 5.13894141e-01, -8.25528562e-01, -2.17473656e-01,
           8.44412819e-02],
         [ 8.16322923e-01,  5.11885643e-01, -2.67580211e-01,
          -2.27262331e-06],
         [ 4.48366553e-01, -6.30170703e-01,  2.92362720e-01,
           5.62569618e-01],
         [ 7.55349934e-01, -4.01505411e-01, -5.26768491e-02,
           5.15301168e-01],
         [ 5.83368719e-01,  6.54897273e-01, -1.78395048e-01,
           4.46160167e-01],
         [ 1.50415495e-01, -8.43423232e-02,  9.07132626e-01,
           3.83929253e-01],
         [ 3.51267397e-01, -4.79180515e-01, -6.72718406e-01,
           4.41101640e-01],
         [ 2.13118084e-02, -3.92502457e-01,  9.03931379e-01,
          -1.68490201e-01],
         [ 1.78065225e-01, -2.28564411e-01, -8.42103124e-01,
           4.54881907e-01],
         [ 6.44383252e-01,  6.15257546e-02,  6.22608364e-01,
           4.39623684e-01],
         [ 1.95853919e-01,  4.69816804e-01,  9.88040417e-02,
          -8.55081499e-01],
         [ 9.53602254e-01, -2.66784847e-01, -1.39453724e-01,
           9.51048423e-06],
         [ 3.30341011e-01,  3.26218933e-01, -8.71389091e-01,
          -1.58625111e-01],
         [ 2.05628812e-01,  2.89109439e-01,  6.62635088e-01,
           6.59528613e-01],
         [ 4.05107021e-01, -4.96580601e-01, -3.14401329e-01,
          -7.00325131e-01],
         [ 5.18382549e-01, -3.32084656e-01,  3.20979685e-01,
          -7.19743848e-01],
         [ 9.59270060e-01, -1.53278500e-01, -2.37267226e-01,
           8.10090478e-06],
         [ 3.85056168e-01,  8.01068902e-01, -4.42682296e-01,
           1.18561111e-01],
         [ 5.42410202e-02, -6.64576828e-01,  1.38623804e-01,
           7.32234597e-01],
         [ 2.59687975e-02, -1.53712362e-01, -9.24061418e-01,
           3.49031985e-01],
         [ 3.76202226e-01,  6.45706475e-01,  6.39349461e-01,
          -1.80702910e-01],
         [ 1.97857022e-01,  2.37925619e-01, -9.42281663e-01,
           1.27887428e-01],
         [ 7.07584843e-02, -2.00902700e-01, -2.25372225e-01,
           9.50704396e-01],
         [ 6.40922248e-01,  4.82701659e-01, -6.18803129e-02,
          -5.93579948e-01],
         [ 3.89685214e-01,  5.66000104e-01, -8.90468881e-02,
           7.21144438e-01],
         [ 6.77316725e-01,  2.31029093e-01,  1.72758877e-01,
           6.76765382e-01],
         [ 2.11625978e-01, -7.28876173e-01, -6.50574267e-01,
          -2.74170358e-02],
         [ 5.07890582e-01, -3.04862678e-01,  4.92896050e-01,
           6.37370884e-01],
         [ 3.32137257e-01,  3.08757782e-01,  7.87832081e-01,
           4.16822910e-01],
         [ 5.27941138e-02,  1.56271741e-01, -6.84554756e-01,
           7.10045040e-01]])
# ---
# name: test_load_cellpack[cif].7
  array([], dtype=bool)
# ---
# name: test_load_cellpack[cif].8
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
